--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.eInfgr {
+  background: #f5f8fb;
+  border-radius: 10px;
+  box-shadow: 0 12px 24px 0 rgba(0,0,0,0.15);
+  font-family: Helvetica Neue;
+  overflow: hidden;
+  position: relative;
+  bottom: initial;
+  top: initial;
+  right: initial;
+  left: initial;
+  width: 350px;
+  width: 900px;
+  height: 520px;
+  z-index: 999;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  -webkit-transform-origin: bottom right;
+  -ms-transform-origin: bottom right;
+  transform-origin: bottom right;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  -webkit-transition: transform 0.3s ease;
+  transition: transform 0.3s ease;
+}
