--- a/src/App.css
+++ b/src/App.css
@@ -373,7 +373,8 @@ input[type=submit].submit , .submit {
 /* Pagnation */
 .pagnation {
   display: flex;
-    padding-left: 20%;
+    padding-left: 35%;
+    /* padding-right: 20%; */
     list-style: none;
     border-radius: .25rem;
 }
